--- a/Server/src/main/webapp/WEB-INF/web.xml
+++ b/Server/src/main/webapp/WEB-INF/web.xml
@@ -7,26 +7,18 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
-    <display-name>Archetype Created Web Application</display-name>
+    <display-name>WebChat TouchSoft REST</display-name>
     <servlet>
-        <servlet-name>Test Jersey Service</servlet-name>
-        <!-- For Jersey 1.x -->
-        <!-- <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class> -->
-        <!-- For Jersey 2.x -->
+        <servlet-name>api</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <!-- For Jersey 1.x -->
-            <!-- <param-name>com.sun.jersey.config.property.packages</param-name> -->
-            <!-- For Jersey 2.x -->
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.mixail.rest</param-value>
+            <param-value>io.swagger.v3.jaxrs2.integration.resources,com.mixail.rest</param-value>
         </init-param>
-        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Test Jersey Service </servlet-name>
-        <url-pattern>/rest/*</url-pattern>
+        <servlet-name>api</servlet-name>
+        <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
-
 
 </web-app>
